# lgtm

./: .gitignore  README.md
bridge-code/: .gitignore  Makefile  bridge_code.cpp  csi-collection.sh
cryptography/: Makefile  lgtm_crypto.cpp  lgtm_crypto.hpp  lgtm_crypto_runner.cpp  lgtm_crypto_runner.hpp  lgtm_crypto_runner_test.cpp  lgtm_file_utils.cpp  lgtm_file_utils.hpp  lgtm_file_utils_test.cpp
csi-code/: csi-collection.sh  csi_sampling.m  globals_init.m  lgtm_spotfi_runner.m  set-5300-wifi.sh  spotfi.m  spotfi_algorithm_1.m  total-csi-setup.sh  wireless-information-directory.txt
experimental-data/: lgtm-monitor--sample-testing-output.txt  sampling_output_parser.py  spotfi_test_output_parser.py  timing-test-data-2.txt  timing-test-data-3.txt  timing-test-data-4.txt  timing-test-data.txt
facial-recognition/full-preprocessing/: CMakeLists.txt  full_preprocessing.cpp
facial-recognition/openCV/augment-data/: CMakeLists.txt  augment_data.cpp
facial-recognition/openCV/face-detect/: CMakeLists.txt  face_detect.cpp  face_detect.hpp  run_face_detect.cpp  yalefaces.csv
facial-recognition/pad-images/: CMakeLists.txt  pad_images.cpp  pad_images.hpp  run_pad_images.cpp
injection-monitor/: .gitignore  .lgtm-DEBUGGER-crypto-params-third-message  .lgtm-DEBUGGER-crypto-params-third-message--second  .lgtm-DEBUGGING-crypto-params-third-message  create_yalefaces_csv.py  full-lgtm-with-encryption.sh  full-lgtm.sh  inject-monitor-test.sh  log_to_file.sh  matlab-inject-monitor-test.sh  packets_from_file.c  read_mpdu_file.m  setup_inject.sh  setup_inject_and_monitor.sh  setup_monitor_csi.sh  test-file
wireless-adapter-configuration/: 5300-network-setup-wlan2.sh  5300-network-setup-wlan3.sh  5300-network-setup.sh  README.md  csi-collection.sh  switch-back-to-regular-internet.sh  (+2 more)
(+232 files in other folders)
